# mynotif-backend

./: .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  requirements.txt  setup.cfg  setup.py  vercel.json
.github/workflows/: deployment.yml  tests.yml
.vercel/: project.json
src/: db.sqlite3  manage.py  pytest.ini
src/lambdas/: notify.py  requirements.txt
src/main/: migrations_helpers.py  serializers.py  settings.py  tests.py  urls.py  views.py  wsgi.py
src/main/migrations/: 0001_initial.py  0002_row_level_security.py
src/main/tests/: test_views.py
src/nurse/: admin.py  models.py  serializers.py  test_notifications.py  test_send_notifications.py  tests.py  urls.py  views.py
src/nurse/migrations/: 0001_initial.py  0002_alter_nurse_phone.py  0003_alter_nurse_patients.py  0004_auto_20210710_2049.py  0005_alter_prescription_photo_prescription.py  0006_alter_nurse_address_alter_nurse_city_and_more.py  0007_remove_prescription_at_renew.py  0008_rename_address_patient_street_and_more.py  0009_alter_patient_birthday.py  0010_remove_patient_caisse_rattachement_and_more.py  0011_useronesignalprofile.py  0012_prescription_email_doctor.py  0013_alter_prescription_patient.py  0014_stripeproduct_subscription.py  0015_remove_subscription_is_active_and_more.py  0016_alter_subscription_status.py  0017_rename_amount_due_subscription_total_price_and_more.py  0018_subscription_payment_status_alter_subscription_plan.py  0019_rename_customerdetails_customerdetail.py  0020_remove_customerdetail_user_delete_stripeproduct_and_more.py
src/nurse/tests/: test_models.py  test_views.py
src/nurse/utils/: constants.py  email.py
src/payment/: README.md  models.py  urls.py  views.py  webhooks.py
src/payment/migrations/: 0001_initial.py
src/project_nursing/: asgi.py  settings.py  tests.py  urls.py  wsgi.py
src/staticfiles/: README.md
src/tests/: README.md  conftest.py
src/tests/lambdas/: test_notify.py
src/tests/main/: test_core.py  test_migrations_helpers.py  test_views.py
src/tests/nurse/: test_models.py  test_views.py
terraform/: apprunner.tf  backend.tf  cloudwatch.tf  ecr.tf  iam-policies.tf  lambda.tf  main.tf  outputs.tf  route53.tf  s3.tf  ssm.tf  terraform.tfvars  variables.tf
(+10 files in other folders)
