[flake8]
max-line-length = 88
extend-ignore = E203

[isort]
profile = black

[metadata]
name = mynotif
version = 0.1
description = Patient management app for nurses
long_description = file: README.md
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3

[options]
install_requires =
    boto3
    dj-database-url
    Django<4
    django-cors-headers
    django-extensions
    django-on-heroku
    django-storages
    djangorestframework<4
    drf-spectacular
    gunicorn
    Pillow
    psycopg2-binary
    python-dateutil
    python-dotenv
    PyYAML
    whitenoise
    sentry-sdk

[options.extras_require]
dev =
    black
    flake8
    freezegun
    isort
    moto[s3]
    pdbpp
    pyflakes
    pytest
    pytest-django
