[flake8]
max-line-length = 88
extend-ignore = E203

[isort]
profile = black

[metadata]
name = mynotif
version = 0.1
description = Patient management app for nurses
long_description = file: README.md
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3

[options]
install_requires =
    boto3
    Django<4
    django-cors-headers
    django-storages
    djangorestframework<4
    drf-spectacular
    Pillow
    python-dateutil
    python-dotenv
    PyYAML
    sentry-sdk

[options.extras_require]
dev =
    black
    django-extensions
    flake8
    freezegun
    isort
    moto[s3]
    pdbpp
    pyflakes
    pytest
    pytest-django
