[flake8]
max-line-length = 88
extend-ignore = E203

[isort]
profile = black

[metadata]
name = mynotif
version = 0.1
description = Patient management app for nurses
long_description = file: README.md
classifiers =
    Framework :: Django
    Programming Language :: Python :: 3

[options]
install_requires =
    boto3
    Cython
    Django<5.1
    django-cors-headers
    django-extensions
    django-storages
    djangorestframework<4
    djoser
    drf-spectacular
    gunicorn
    onesignal-sdk
    Pillow
    psycopg2-binary
    python-dateutil
    python-dotenv
    PyYAML
    sentry-sdk
    whitenoise

[options.extras_require]
dev =
    black
    flake8
    freezegun
    isort
    moto[s3]
    pdbpp
    pyflakes
    pytest
    pytest-django
